# gnome-keyring-sharp

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  gnome-keyring-sharp.csproj  gnome-keyring-sharp.sln
Tests/: TestRing.cs
docs/: .gitignore  Gnome.Keyring.source  Makefile.am
docs/Gnome.Keyring/: Gnome.Keyring.xml  index.xml
docs/Gnome.Keyring/Gnome.Keyring/: AccessRights.xml  GenericItemData.xml  ItemACL.xml  ItemData.xml  ItemType.xml  KeyringException.xml  KeyringInfo.xml  NetItemData.xml  NoteItemData.xml  ResultCode.xml  Ring.xml
gnome-keyring-sharp-glue/: .gitignore  Makefile.am  glue.c  gnome-keyring-sharp-glue.cproj
sample/: Makefile.am  README  keyring-showall.cs  secret.cs
src/: .gitignore  Gnome.Keyring.dll.config  Makefile.am  gnome-keyring-sharp-1.0.pc.in  gnome-keyring-sharp.pc.in
src/Gnome.Keyring/: AssemblyInfo.cs.in  ItemData.cs  KeyringException.cs  KeyringInfo.cs  Makefile.am  NetItemData.cs  RequestMessage.cs  ResponseMessage.cs  ResultCode.cs  Ring.cs
