lib_LTLIBRARIES = libgnome-keyring-sharp-glue.la

libgnome_keyring_sharp_glue_la_SOURCES = glue.c
libgnome_keyring_sharp_glue_la_LDFLAGS = -module -avoid-version -no-undefined
libgnome_keyring_sharp_glue_la_LIBADD = $(GNOME_KEYRING_LIBS)
libgnome_keyring_sharp_glue_la_CFLAGS = $(GNOME_KEYRING_CFLAGS)
