EXTRA_DIST=\
		AccessRights.cs \
		AssemblyInfo.cs.in \
		AttributeType.cs \
		GenericItemData.cs \
		ItemACL.cs \
		ItemData.cs \
		ItemType.cs \
		KeyringException.cs \
		KeyringInfo.cs \
		NetItemData.cs \
		NoteItemData.cs \
		Operation.cs \
		RequestMessage.cs \
		ResponseMessage.cs \
		ResultCode.cs \
		Ring.cs
